Set spinbox container background color to avoid visual spillage of its parent component background into it

--- a/src/apps/watlas-common/watlas-viewer-common.css
+++ b/src/apps/watlas-common/watlas-viewer-common.css
@@ -264,6 +264,7 @@ select {
 }
 
 .wva-spinbox-container {
+    background-color: white;
     border: 0.15em solid #ccc;
     border-radius: 0;
     display: grid;
